plugins {
    id "idea"
    id "application"
    id "com.github.sherter.google-java-format" version "0.9"
}

group 'io.leonard'
version '1.0.0'


sourceCompatibility = 14

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs << '--enable-preview'
}

ext {
    junitVersion = '5.6.1'
    jacksonVersion = '2.10.3'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-parameter-names', version: jacksonVersion
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'org.tuxdude.logback.extensions', name: 'logback-colorizer', version: '1.0.1'
}

googleJavaFormat {
    options style: 'AOSP'
}

mainClassName = "de.stadtnavi.App"
applicationDefaultJvmArgs = ["--enable-preview"]

test {
    useJUnitPlatform()
}
